Improved support for showing past events

--- a/layouts/partials/home-page/join-next-summit.html
+++ b/layouts/partials/home-page/join-next-summit.html
@@ -1,10 +1,10 @@
 <section class="section joinnext-section">
   <div class="container container-xl container-centric">
     <div class="joinnext-block">
-      <div class="section-title joinnext-title">Join us for more on June 2021{{/* .Site.nextSummerYear */}}</div>
+      <div class="section-title joinnext-title">Participate online and learn</div>
+
       <div class="joinnext-badge-next">Come Explore Open Security Summit Virtual Experience: You'll Be Able To Access
         All- New Sessions And Live Opportunities To Ask The Experts Questions On Key Topics.</div>
-
     </div>
   </div>
 </section>
