--- a/layouts/partials/schedule/list/calendar.html
+++ b/layouts/partials/schedule/list/calendar.html
@@ -9,7 +9,7 @@
 
 {{ $title := "Summit Week (15th - 19th June)" }}
 
-{{ partial "schedule/table/table.html" (dict "self" . "pages" $sessions "valid_days" $summit_days "title" $title )}}
+{{ partial "schedule/table/table.html" (dict "this" . "pages" $sessions "valid_days" $summit_days "title" $title )}}
 
 
 
