added two threat modeling sessions

--- a/layouts/partials/session/register-hey-summit.html
+++ b/layouts/partials/session/register-hey-summit.html
@@ -7,5 +7,5 @@
         </button>
     </a>
 {{ else }}
-    <span class="label label-warning">not scheduled</span>
+    <span class="label label-warning">Comming Soon</span>
 {{ end}}
