fix(mini-summit): Show proper March schedule
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/layouts/partials/schedule/list/days.html
+++ b/layouts/partials/schedule/list/days.html
@@ -3,6 +3,8 @@
 
 {{ $pages         := partial "params/next-event-sessions.html" $this  }}
 
+{{ $this.Scratch.Set "has-session" true }}
+
 {{ if  $this.Scratch.Get "has-session" }}
     {{ if .title}}
         <div class="container schedule-session-group">
@@ -15,6 +17,7 @@
     {{ with .days}}
         {{ range sort . "order"}}
             {{ $sessions := where $pages ".Params.when_day" .key }}
+            {{ printf "%+v" $sessions }}
             {{ partial "schedule/list/day.html" (dict "this" $this "sessions" $sessions "day" .day "date" .date "month" .month) }}
         {{ end}}
     {{ end}}
