--- a/layouts/partials/home-page/schedule.html
+++ b/layouts/partials/home-page/schedule.html
@@ -1,15 +1,21 @@
 <section class="schedule-section">
   <div class="container container-xl">
 
-    <h1> Dec 2020</h1>
+    <h1>Dec 2020</h1>
     <ul>
         <b>
         See <a href="/sessions/2020/mini-summits/dec">here the sessions that happened</a> in December 2020
       </b>
     </ul>
 
-    <h1> Mar 2021</h1>
+    <h1>Jan 2021</h1>
+    <ul>
+        <b>
+        See <a href="/sessions/2021/mini-summits/jan">here the sessions that happened</a> in January 2021
+      </b>
+    </ul>
 
+    <h1> Mar 2021</h1>
     {{ partial "schedule/list/body.html" . }}
 
   </div>
