Added April's Summit

--- a/layouts/partials/home-page/schedule.html
+++ b/layouts/partials/home-page/schedule.html
@@ -1,21 +1,20 @@
 <section class="schedule-section">
   <div class="container container-xl">
 
-    <h1>Dec 2020</h1>
+    <h3>Recent Summits</h3>
     <ul>
-        <b>
-        See <a href="/sessions/2020/mini-summits/dec">here the sessions that happened</a> in December 2020
+        <li>
+            <a href="/sessions/2020/mini-summits/dec">December 2020</a> sessions
+        </li>
+        <li>
+            <a href="/sessions/2021/mini-summits/jan">January 2021</a> sessions
+        </li>
+        <li>
+            <a href="/sessions/2021/mini-summits/mar">March 2021</a> sessions
+        </li>
       </b>
     </ul>
 
-    <h1>Jan 2021</h1>
-    <ul>
-        <b>
-        See <a href="/sessions/2021/mini-summits/jan">here the sessions that happened</a> in January 2021
-      </b>
-    </ul>
-
-    <h1> Mar 2021</h1>
     {{ partial "schedule/list/body.html" . }}
 
   </div>
