Added final set of sessions for OSS April

--- a/layouts/partials/schedule/table/table.html
+++ b/layouts/partials/schedule/table/table.html
@@ -11,11 +11,11 @@
     <thead class="schedule-by-days">
         <tr>
             <th class="time-col"></th>
-            <th>Monday    </th>
-            <th>Tuesday   </th>
-            <th>Wednesday </th>
-            <th>Thursday  </th>
-            <th>Friday    </th>
+            <th>Monday    - 12th</th>
+            <th>Tuesday   - 13th</th>
+            <th>Wednesday - 14th</th>
+            <th>Thursday  - 15th</th>
+            <th>Friday    - 16th</th>
         </tr>
     </thead>
     <tbody>
