--- a/layouts/partials/schedule/list/body.html
+++ b/layouts/partials/schedule/list/body.html
@@ -12,7 +12,7 @@
 
 
 
-<div class="alert alert-warning">All times bellow are GMT (London time)</div>
+<div class="alert alert-warning">All times bellow are BST (London time)</div>
 {{ $title := ""}}
 
 {{ partial "schedule/list/days.html" (dict "this" $this "days" $days_next_summit "title" $title) }}
