--- a/layouts/partials/schedule/table/table.html
+++ b/layouts/partials/schedule/table/table.html
@@ -1,6 +1,7 @@
 {{ $this       := .this }}
 {{ $valid_days := $this.Site.Data.schedule.next_event.days              }}
 {{ $times      := $this.Site.Data.schedule.days.times                   }}
+{{ $days       := $this.Site.Data.schedule.days.days_next_summit        }}
 
 {{ $pages      := .pages }}
 
@@ -11,11 +12,9 @@
     <thead class="schedule-by-days">
         <tr>
             <th class="time-col"></th>
-            <th>Monday    - 12th</th>
-            <th>Tuesday   - 13th</th>
-            <th>Wednesday - 14th</th>
-            <th>Thursday  - 15th</th>
-            <th>Friday    - 16th</th>
+            {{ range $days }}
+            <th>{{ .day }} - {{ .date }}</th>
+            {{ end }}
         </tr>
     </thead>
     <tbody>
