--- a/layouts/partials/sponsors/sponsorship-model.html
+++ b/layouts/partials/sponsors/sponsorship-model.html
@@ -4,29 +4,36 @@
       <div class="container-fluid">
         <div class="row">
           <div class="section-overtitle sponsor-overtitle">SPONSHORSHIP</div>
-          <p  class="section-title sponsor-title">MINI SUMMIT SPONSORSHIP OPPORTUNITIES 2021</p>
-          <p>If you are interested in one of the sponsorships packages below please <a href="mailto:info@opensecsummit.org">contact us</a>-->
-          <!--        </p>-->
+          <p  class="section-title sponsor-title">MEMBERSHIP PACKAGES</p>
+          <p>If you are interested in one of the sponsorships packages below please <a href="mailto:info@opensecsummit.org">contact us</a></p>
         </div>
         <div class="packages row">
           <div class="package-wrapper col-xs-12 col-md-6 col-lg-4">
             <div class="package gold"><h3 class="package-level">Gold</h3>
-              <div class="cost">£5,000</div>
+              <div class="cost">£10,000</div>
               <div class="package-adv">
-                <div class="package-adv-head">50 tickets</div>
-                <div class="package-adv-for">Training or Summit</div>
+                <div class="package-adv-head">Company Profile on Website</div>
+                <div class="package-adv-for"></div>
               </div>
               <div class="package-adv">
-                <div class="package-adv-head">20 tickets</div>
-                <div class="package-adv-for">for sponsor</div>
+                <div class="package-adv-head">Sponsorship of 5 OSS projects</div>
+                <div class="package-adv-for"></div>
+              </div>
+              <div class="package-adv">
+                <div class="package-adv-head">40 employee memberships</div>
+                <div class="package-adv-for"></div>
               </div>
               <div class="package-adv">
                 <div class="package-adv-head">25 trees</div>
-                <div class="package-adv-for">for good causes</div>
+                <div class="package-adv-for"></div>
               </div>
               <div class="package-adv">
-                <div class="package-adv-head">Logo placement</div>
-                <div class="package-adv-for">on Summit website and marketing</div>
+                <div class="package-adv-head">Social media announcement featuring your brand/Logo</div>
+                <div class="package-adv-for"></div>
+              </div>
+              <div class="package-adv">
+                <div class="package-adv-head">10% discount on Event Sponsorship</div>
+                <div class="package-adv-for"></div>
               </div>
             </div>
           </div>
@@ -34,22 +41,30 @@
           <div class="package-wrapper col-xs-12 col-md-6 col-lg-4">
             <div class="package silver">
               <h3 class="package-level">Silver</h3>
-              <div class="cost">£1,000</div>
+              <div class="cost">£3,000</div>
               <div class="package-adv">
-                <div class="package-adv-head">10 tickets</div>
-                <div class="package-adv-for">Training or Summit</div>
+                <div class="package-adv-head">Company Profile on Website</div>
+                <div class="package-adv-for"></div>
               </div>
               <div class="package-adv">
-                <div class="package-adv-head">5 tickets</div>
-                <div class="package-adv-for">for sponsor</div>
+                <div class="package-adv-head">Sponsorship of 2 OSS projects</div>
+                <div class="package-adv-for"></div>
               </div>
               <div class="package-adv">
-                <div class="package-adv-head">5 trees</div>
-                <div class="package-adv-for">for good causes</div>
+                <div class="package-adv-head">15 employee memberships</div>
+                <div class="package-adv-for"></div>
               </div>
               <div class="package-adv">
-                <div class="package-adv-head">Logo placement</div>
-                <div class="package-adv-for">on Summit website and marketing</div>
+                <div class="package-adv-head">15 trees</div>
+                <div class="package-adv-for"></div>
+              </div>
+              <div class="package-adv">
+                <div class="package-adv-head">Social media announcement featuring your brand/Logo</div>
+                <div class="package-adv-for"></div>
+              </div>
+              <div class="package-adv">
+                <div class="package-adv-head">5% discount on Event Sponsorship</div>
+                <div class="package-adv-for"></div>
               </div>
             </div>
           </div>
@@ -57,22 +72,22 @@
           <div class="package-wrapper col-xs-12 col-md-6 col-lg-4">
             <div class="package bronze">
               <h3 class="package-level">Bronze</h3>
-              <div class="cost">£500</div>
+              <div class="cost">£1,000</div>
               <div class="package-adv">
-                <div class="package-adv-head">5 tickets</div>
-                <div class="package-adv-for">Training or Summit</div>
+                <div class="package-adv-head">Company Profile on Website</div>
+                <div class="package-adv-for"></div>
               </div>
               <div class="package-adv">
-                <div class="package-adv-head">3 tickets</div>
-                <div class="package-adv-for">for sponsor</div>
+                <div class="package-adv-head">5 employee memberships</div>
+                <div class="package-adv-for"></div>
               </div>
               <div class="package-adv">
-                <div class="package-adv-head">2 trees</div>
-                <div class="package-adv-for">for good causes</div>
+                <div class="package-adv-head">5 trees</div>
+                <div class="package-adv-for"></div>
               </div>
               <div class="package-adv">
-                <div class="package-adv-head">Logo placement</div>
-                <div class="package-adv-for">on Summit website and marketing</div>
+                <div class="package-adv-head">Social media announcement featuring your brand/Logo</div>
+                <div class="package-adv-for"></div>
               </div>
             </div>
           </div>
