Added new design and updated Sep schedule

--- a/layouts/partials/projects/highlight_videos.html
+++ b/layouts/partials/projects/highlight_videos.html
@@ -1,3 +1,7 @@
+<div class="project-section-title">
+    Highlight Videos
+</div>
+
 {{ if .Params.highlight_videos }}
     {{ range .Params.highlight_videos}}
         <iframe class="video"
