--- a/layouts/partials/projects/project-box.html
+++ b/layouts/partials/projects/project-box.html
@@ -3,7 +3,8 @@
         <a href="{{ .project.Permalink }}">{{.project.Title}}</a>
     </div>
     <div class="overtitle">{{ .project.Description }}</div>
+    <ul class="list"></ul>
     <a href="{{ .project.Permalink }}">
-        <div class="button"><button>view project </button></div>
+        <div class="button"><button>view project</button></div>
     </a>
 </div>
