--- a/assets/style/projects.scss
+++ b/assets/style/projects.scss
@@ -7,4 +7,14 @@
     margin-bottom: 30px;
     vertical-align: center;
   }
+  &-section-title{
+    text-align: center;
+    padding: 10px;
+    background-color: #d9e5f0;
+    font-size: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    position: relative;
+    font-family: 'Oswald Bold', sans-serif;
+  }
 }
