--- a/layouts/partials/projects/body.html
+++ b/layouts/partials/projects/body.html
@@ -2,11 +2,9 @@
     <div class="container container-xl">
         <div class="tracks-wrapper">
             <div class="table">
-                {{ $styles := (slice "ciso" "cloud-security" "content-disarm" "covid" "devsecops" "hacking" "isg" "lightning" "misc" "owasp-asvs" "owasp-juice-shop" "owasp-projects" "security-standards" "social" "threat-modeling" "wardleymaps") }}
+                {{/* todo: refactor styles below to decouple it from the tracks names */}}
+                {{ $styles := (slice "ciso" "cloud-security" "content-disarm" "covid" "devsecops" "hacking" "isg" "lightning" "misc" "security-standards" "social" "threat-modeling" "wardleymaps" "owasp-projects" ) }}
                 {{ $projects := where .Site.Pages ".Params.type" "project" }}
-
-
-                <hr>
 
                 {{ range $index, $project := $projects }}
                     {{ $style          := index $styles $index}}
@@ -14,7 +12,7 @@
 
                 {{ end }}
             </div>
-
         </div>
     </div>
 </section>
+
