--- a/layouts/partials/projects/sponsored_by.html
+++ b/layouts/partials/projects/sponsored_by.html
@@ -1,3 +1,6 @@
+<div class="project-section-title">
+    Sponsored by
+</div>
 {{ if .Params.sponsor}}
     {{ $sponsor := (where $.Site.Pages ".Params.title" .Params.sponsor)}}
     {{ range $sponsor }}
