refactoring the use of 'master' to 'main'

--- a/layouts/partials/edit-link.html
+++ b/layouts/partials/edit-link.html
@@ -3,7 +3,7 @@
 <div class="edit-link hidden-print">
 	<ul class="github">
 		<li>
-            <a href="{{.Site.Params.ghrepo}}edit/master/content/{{.File.Path}}" target="_blank">
+            <a href="{{.Site.Params.ghrepo}}edit/main/content/{{.File.Path}}" target="_blank">
                 <i class="fa fa-pencil-square-o"></i>Edit this page
             </a>
             {{.Params.title}}
