--- a/layouts/partials/session/register-as-participant.html
+++ b/layouts/partials/session/register-as-participant.html
@@ -2,5 +2,5 @@
 <!--<p>To register as participant add <code>{{ .Params.title}}</code> to either:-->
 <!--<ol>-->
 <!--    <li>the <code>sessions</code> metadata field from your participant's page (find your participant page and look for the edit link).</li>-->
-<!--    <li><b>or</b> the <code>participants</code> metadata field from this git <a href="{{.Site.Params.ghrepo}}edit/master/content/{{.File.Path}}" target="_blank">session page </a></li>-->
+<!--    <li><b>or</b> the <code>participants</code> metadata field from this git <a href="{{.Site.Params.ghrepo}}edit/main/content/{{.File.Path}}" target="_blank">session page </a></li>-->
 <!--</ol></p>-->
