added Jim Manico Top 10 2021 refactored how some of the times are set

--- a/layouts/partials/schedule/table/time.html
+++ b/layouts/partials/schedule/table/time.html
@@ -1,12 +1,24 @@
+<!--<table class="table">-->
+<!--    <tr>-->
+<!--        <td><b>{{.time}}</b></td>-->
+<!--    </tr>-->
+<!--    <tr>-->
+<!--        <td class="session-time">-->
+<!--            {{ index .self.Site.Data.schedule.times .time}}-->
+<!--        </td>-->
+<!--    </tr>-->
+<!--</table>-->
 <table class="table">
     <tr>
-        <td><b>{{.time}}</b></td>
+        <td><b>{{ index .self.Site.Data.schedule.times .time}}</b></td>
     </tr>
     <tr>
         <td class="session-time">
-            {{ index .self.Site.Data.schedule.times .time}}
+            {{.time}}
         </td>
     </tr>
 </table>
+
+
 
 
