--- a/layouts/partials/home-page/highlights.html
+++ b/layouts/partials/home-page/highlights.html
@@ -6,7 +6,7 @@
       <img src="{{ .Site.BaseURL }}/img/home/speakers/Jane_Frankland.png" class="img-responsive" alt="img">
       <div>
         <h3>Jane Frankland</h3>
-        <p>CISCO and Risk Management</p>
+        <p>CISO and Risk Management</p>
         <p>21 September, 2020</p>
       </div>
     </div>
