--- a/layouts/partials/about/about-2021.html
+++ b/layouts/partials/about/about-2021.html
@@ -2,7 +2,9 @@
     <div class="row">
         <div class="col-sm-8">
 
-            <p>The Open Security Summit (OSS) 2021 is focused on the collaboration between developers and application security. The OSS, now in the 6th edition, is an event that has been running already for 13 years. It used to be held at Centre Parcs Woburn Forest in the United Kingdom. However, this year it takes a different format. It's being held 100% virtually due to the Covid-19 pandemic. It offers an amazing, high-energy experience of 10 days of training sessions and 5 days for the main summit. This is not a conference with just some unidirectional presentations. Every thoroughly prepared working session is geared towards a specific Application Security challenge and will be focused on actionable outcomes. Thus the attendees will get a unique chance to work and collaborate intensively.</p>
+            <p>The Open Security Summits (OSS) 2022 are focused on the collaboration between developers and application security. These Summits have been running for 13 years. It used to be held at Centre Parcs Woburn Forest in the United Kingdom. However, at the moment it takes a different format.
+                It's being held 100% virtually due to the Covid-19 pandemic. It offers bi-monthly, high-energy experience of training and working sessions. This is not a conference with just some unidirectional presentations. Every thoroughly prepared working session is geared towards a specific Application Security challenge and will be focused on actionable outcomes.
+                Thus the attendees will get a unique chance to work and collaborate intensively.</p>
 
             <p>Both, the trainings and the main sessions cover a wide range of important and interesting topics related to Threat modeling, Inspection and Sanitisation Guidance (ISG) standards, Wardley maps, cybersecurity, CISO and risk management, social engineering, COVID apps and many others.</P>
 
@@ -11,7 +13,7 @@
 
             <ul>
                 <li>Improve your expertise by meeting leading figures from OWASP, security, development, government agencies and vendor companies</li>
-                <li> Come up with action plans by collaborating in working sessions tackling some of the hardest security problems we are facing in 2020</li>
+                <li> Come up with action plans by collaborating in working sessions tackling some of the hardest security problems we are facing in 2022</li>
                 <li> Learn new skills at hands-on practically-driven sessions, enabling you to return with the knowledge, skills and tools needed to make impactful changes in your environment</li>
             </ul>
 
