--- a/layouts/partials/home-page/hero-mini-summit.html
+++ b/layouts/partials/home-page/hero-mini-summit.html
@@ -4,7 +4,7 @@
       <div class="hero-badge-next">2021 Mini Summits
         {{/* .Site.nextSummerYear */}}
       </div>
-      <div class="hero-over-message">THE OPEN SECURITY SUMMIT 2020 IS OVER, BUT YOUR LEARNING DOESN'T HAVE TO END</div>
+      <div class="hero-over-message"></div>
       <div class="hero-title">The Open Security Summit is organising monthly <br/>Mini-Summits </div>
 
     </div>
