--- a/layouts/partials/home-page/hero-over.html
+++ b/layouts/partials/home-page/hero-over.html
@@ -4,7 +4,7 @@
       <div class="hero-badge-next">NEW SUMMIT IN 2021
         {{/* .Site.nextSummerYear */}}
       </div>
-      <div class="hero-over-message">THE OPEN SECURITY SUMMIT 2020 IS OVER, BUT YOUR LEARNING DOESN'T HAVE TO END</div>
+      <div class="hero-over-message"></div>
       <div class="hero-title">THANKS TO ALL WHO&nbsp;PARTICIPATED IN THE SUMMIT 2020</div>
 
     </div>
