one more fix (2022 reference)

--- a/layouts/partials/home-page/hero-mini-summit.html
+++ b/layouts/partials/home-page/hero-mini-summit.html
@@ -1,7 +1,7 @@
 <section class="hero-section hero-over">
   <div class="container hero-block__wrapper">
     <div class="hero-block">
-      <div class="hero-badge-next">2021 Mini Summits
+      <div class="hero-badge-next">Mini Summits
         {{/* .Site.nextSummerYear */}}
       </div>
       <div class="hero-over-message"></div>
