Added note that sessions are free

--- a/layouts/partials/home-page/join-next-summit.html
+++ b/layouts/partials/home-page/join-next-summit.html
@@ -1,10 +1,10 @@
 <section class="section joinnext-section">
   <div class="container container-xl container-centric">
     <div class="joinnext-block">
-      <div class="section-title joinnext-title">Participate online and learn</div>
+      <div class="section-title joinnext-title">Participate online and learn (for free)</div>
 
       <div class="joinnext-badge-next">Come Explore Open Security Summit Virtual Experience: You'll Be Able To Access
-        All- New Sessions And Live Opportunities To Ask The Experts Questions On Key Topics.</div>
+        All- New Sessions And Live Opportunities To Ask The Experts Questions On Key Topics. All virtual sessions are free to attend, just register to receive a notification and link to zoom session.</div>
     </div>
   </div>
 </section>
