--- a/layouts/page/search.html
+++ b/layouts/page/search.html
@@ -6,7 +6,7 @@
 {{ end }}
 
 {{ define "breadcrumbs" }}
-    <div class="inner_main_about">
+    <div class="inner_main_participants">
         <div class="center_heading">
             <div class="container">
                 <h1>{{ .Title }}</h1>
@@ -18,6 +18,7 @@
 {{ define "content" }}
     <section class="mid_wrap">
         <div class="container">
+            {{ .Content }}
             {{ partial "search.html" . }}
         </div>
     </section>
