--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -107,5 +107,5 @@
   <!-- cookie consent -->
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
 
-
+  {{ partial "matomo.html"}}
 </head>
