--- a/layouts/partials/schedule/table/table.html
+++ b/layouts/partials/schedule/table/table.html
@@ -15,7 +15,7 @@
             {{ range $days }}
                 <th>{{ .day }} - {{ .date }}
                     <div>
-                        <span class="label label-primary">{{.where::}}</span>
+                        <span class="label label-primary">{{.where}}</span>
                     </div>
                 </th>
             {{ end }}
